jumbotron font-size fixed, footer links aligned

--- a/css/style.css
+++ b/css/style.css
@@ -61,9 +61,6 @@ img{
     margin-top: 30px;
     min-width: 300px;
 }
-.col.text{
-    flex-grow: 1;
-}
 .cols{
     margin: 20px 0;
 }
@@ -104,8 +101,11 @@ a{
 ul{
     list-style: none;
 }
+p{
+    line-height: 25px;
+}
 h1{
-    font-size: 50px;
+    font-size: 70px;
     margin: 50px 0;
 }
 h2{
@@ -120,88 +120,6 @@ h4{
     font-size: 14px;
     margin-bottom: 20px;
 }
-/* debug */
-/* .debug .w-100{
-    background-color: greenyellow
-}
-.debug .w-30{
-    background-color: greenyellow;
-}
-.debug .w-40{
-    background-color: lightgreen;
-}
-.debug .w-60{
-    background-color: darkolivegreen;
-} */
-/* .debug .col{
-    height: 300px;
-    border: dashed 2px white;
-} */
-/* .debug.col.text{
-    background-color: yellow;
-} */
-/* .debug .cols{
-    background-color: green;
-    border: dashed 2px black;
-} */
-/* .debug section{
-    border: dotted 2px black;
-} */
-
-/* .debug header{
-    background-color: aqua;
-} */
-/* .debug #header-logo{
-    height: 30px;
-    width: 60px;
-    background-color: blue;
-} */
-/* .debug header nav{
-    width: 300px;
-    height: 50px;
-    background-color: lightblue;
-} */
-/* .debug #header-btn
-{
-    width: 50px;
-    height: 30px;
-} */
-
-/* .debug h1{
-    background-color: red;
-} */
-
-/* .debug h2{
-    background-color: orange;
-} */
-
-/* .debug .radio-btns{
-    width: 200px;
-    height: 30px;
-    background-color: lightgray;
-} */
-
-/* .debug .squares .grid-block{
-    background-color: purple;
-}
-.debug .squares .square{
-    background-color: pink;
-    border: dashed 1px black;
-}
-.debug .squares .center{
-    background-color: violet;
-} */
-
-/* .debug .question{
-    height: 60px;
-    background-color:indigo;
-} */
-
-/* .debug footer .box.language{
-    height: 50px;
-    width: 200px;
-    background-color: darkgray;
-} */
 
 /* CSS rules */
 
@@ -249,7 +167,7 @@ main .btn{
 #jumbotron #internal-link{
     display: inline-block;
     font-size: 50px;
-    margin: 50px 0 10px;
+    margin: 20px 0 10px;
     color: black;
 }
 #jumbotron .img.col{
@@ -277,6 +195,7 @@ main .btn{
 }
 
 #plans .col{
+    line-height: 25px;
     font-size: 14px;
     border: solid 1px #D0D0D3;
 }
@@ -322,10 +241,6 @@ main .btn{
     padding: 50px;
 }
 
-#features .cols{
-    
-}
-
 #partners{
     padding-bottom: 0;
 }
@@ -357,7 +272,7 @@ main .btn{
     filter: invert(1);
 }
 #partners .squares{
-    margin: 30px 0 0;
+    padding: 50px 0 0;
 }
 
 #designit{
@@ -417,7 +332,7 @@ main .btn{
 
 /* footer */
 footer{
-    font-size: 12px;
+    font-size: 14px;
     padding: 50px 0;
     background-color: black;
     color: white;
@@ -429,6 +344,7 @@ footer h3{
     margin-bottom: 20px;
 }
 footer a{
+    margin-left: -5px;
     line-height: 30px;
     color: white;
 }
